# archive-download-service

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
archive_download_service/: server.py  settings.py
archive_download_service/cli/: dotenv_writer.py  main.py  parser.py  validators.py
archive_download_service/utils/: file_paths.py  process.py  request_headers.py  static.py  zip_launcher.py
images_grabber/: server.py  utils.py
images_grabber/templates/: 404.html
images_grabber/utils/: file_paths.py  request_headers.py  zip_launcher.py
